# mailtui

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: app.rs  gmail.rs  mail.rs  mail_oauth.rs  main.rs  token_store.rs  ui.rs
app/src/auth/: mail.rs  mod.rs  oauth_wrapper.rs
app/src/fetch/: gmail.rs
app/src/storage/: token_store.rs
app/src/ui/: login.rs  mod.rs  single_mail.rs
mailtui-web/: package-lock.json  package.json
mailtui-web/app/: page.tsx
mailtui-web/app/callback/: route.ts
src/: app.rs  mail.rs  mail_oauth.rs  main.rs  ui.rs
