[package]
name = "mailtui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.29"
imap = { version = "3.0.0-alpha.15" }
native-tls = "0.2"
oauth2 = "4"
tiny_http = "0.12"
open = "3"
dirs = "5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
url = "2"
once_cell = "1"
base64 = "0.21"
